# velocityPrediction

./: .gitignore  LICENSE  README.md  README.rst  adata_before_velocity_graph.txt  bifurcationExample.py  datasets.py  datasets_old.py  dentategyrus_pred.csv  dentategyrus_runs.csv  downloadDat.py  main.py  plots.py  pyproject.toml  requirements.txt  simpleExample.py  talkFigures.m  toyModel.py
configs/: dentategyrus.txt  forebrain.txt  main.txt  main.yaml  model.txt  pancreas.txt  plots.yaml  runs.yaml  sweep.yaml  sweep_bonemarrow.yaml  sweep_dataset.yaml  sweep_dataset_bonemarrow.yaml  sweep_dataset_dentategyrus.yaml  sweep_dataset_forebrain.yaml  sweep_dataset_pancreas.yaml  sweep_dentategyrus.yaml  sweep_forebrain.yaml  sweep_motifbifurcation.yaml  sweep_motifoscillation.yaml  sweep_motifsimple.yaml  sweep_umap_dimension.yaml  trainer.txt  wandb.yaml
configs/dataset/: Dataset.yaml  Generated.yaml  MotifBifurcation.yaml  MotifOscillation.yaml  MotifSimple.yaml  SCVeloSaved.yaml  SCVeloSimulation.yaml  Saved.yaml
configs/dataset/sparsifier/: TimeSkipByStep.yaml
configs/model/: First.yaml  FirstDistance.yaml  PretrainedModel.yaml  Second.yaml
data/: example_dataset.csv
data/Simulation/: Simulation.csv
data/bonemarrow/: bonemarrow.csv  bonemarrow__umap_n_components_2.csv
data/dentategyrus/: dentategyrus.csv  dentategyrus__umap_n_components_2.csv
data/forebrain/: forebrain.csv
data/pancreas/: pancreas.csv  pancreas__umap_n_components_2.csv  pancreas__umap_n_components_3.csv
figures/: histogram.ipynb  loss_table.ipynb
models/: pretrained_model.ckpt
src/: callbacks.py  datasets.py  main.py  models.py  plots.py  utils.py  wandbruns.py
src/rna_vel_pred/: cs.py  datasets.py  main.py  models.py  plots.py  utils.py
tests/: test_datasets.py
