[project]
name = 'rna_vel_pred'
authors = [
    {name = 'Taos Transue', email = 'taos.transue@utah.edu'},
    {name = 'Payton J. Thomas', email = 'p5thomas@ucsd.edu'},
]
license = { file = 'LICENSE' }
version = '0.0.0'
description = ''
dependencies = [
    'scvelo==0.3.2',
    'h5py==3.8.0',
    'torch==2.4.1',
    'scanpy==1.9.8',
    'scipy==1.13.1',
    'numpy==1.26.4',  # scVelo's scv.tl.velocity_graph breaks with newer versions
    'pandas==2.2.2',
    'tqdm==4.65.0',
    'ipywidgets==8.0.7',
    'lightning==2.2.2',
    'torch_geometric==2.4.0',
    # 'torch-cluster==1.6.3',
    # pip install pyg_lib torch_scatter torch_sparse torch_cluster torch_spline_conv -f https://data.pyg.org/whl/torch-2.1.0+cpu.html
    'hydra-core==1.3.2',
    'wandb==0.18.0',
    'seaborn==0.13.2',
    'tqdm==4.65.0',
    'jupyterlab',
    'tables==3.8.0',
    'flatten-json==0.1.14',
    'pytest==8.1.1',
]
readme = 'README.rst'
requires-python = '>=3.8.10'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
include = ["src/*.py"]
sources = ["src"]

[tool.pytest.ini_options]
filterwarnings = [
    'ignore:Deprecated call to `pkg_resources:DeprecationWarning',
    'ignore:pkg_resources:DeprecationWarning',
]
